[metadata]
name = Block Buster
version = 0.1

url = https://github.com/

[options]
packages =
    blockbuster
    blockbuster.gui
    blockbuster.logic
    blockbuster.util
    blockbuster.resources
    blockbuster.translation
include_package_data = True
install_requires =
    pillow

[options.package_data]
blockbuster = 
    resources/*/*
    translation/*/LC_MESSAGES/*.mo

[options.entry_points]
console_scripts =
    blockbuster = blockbuster:main
